welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

var tab = new Array[Color] (getMondeHauteur())

def remplirTableau(c:Color) {
	for (i <- 0 to getMondeHauteur - 1) {
		getCouleurSol(c)
		tab(i) = getCouleurSol(c)
		avance()
	}
}

def faireColonne() {
	for (i <- 0 to getMondeHauteur() - 1) {
		setCouleurBrosse(tab(i))
		baisseBrosse()
		leveBrosse()
		avance()
	}
}

for (i <- 0 to getMondeLargeur() - 1) {
	faireColonne()
	avance()
	gauche()
	avance()
	droite()
}	
	
}
	
